--- a/login.html
+++ b/login.html
@@ -7,27 +7,34 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="login.css">
 </head>
-<body>
-    <div class="container d-flex flex-column justify-content-center align-items-center min-vh-100">
-        <img src="imagens/logo.png" alt="Game Mania Logo" class="login-logo">
-        <div class="card p-4 shadow">
-            <h2 class="text-center text-primary">Login</h2>
-            <form>
-                <div class="mb-3">
-                    <label for="username" class="form-label">Nome de Usuário ou e-mail</label>
-                    <input type="text" class="form-control" id="username" placeholder="Digite seu nome de usuário ou e-mail" required>
+<body class="bg-primary">
+    <div class="container-fluid d-flex flex-column justify-content-center align-items-center min-vh-100">
+        <a href="index.html" class="mb-4">
+            <img src="imagens/logo.png" alt="Game Mania Logo" class="img-fluid" style="width: 350px; max-width: 100%;">
+        </a>
+        
+        <div class="card shadow-lg" style="width: 350px;">
+            <div class="card-body p-4">
+                <h2 class="text-center text-primary mb-4">Login</h2>
+                <form>
+                    <div class="mb-3">
+                        <label for="username" class="form-label">Nome de Usuário ou e-mail</label>
+                        <input type="text" class="form-control" id="username" placeholder="Digite seu nome de usuário ou e-mail" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="password" class="form-label">Senha</label>
+                        <input type="password" class="form-control" id="password" placeholder="Digite sua senha" required>
+                    </div>
+                    <button type="submit" class="btn btn-primary w-100 mb-3">Entrar</button>
+                </form>
+                <div class="text-center">
+                    <a href="#" class="d-block text-danger text-decoration-none mb-2">Esqueci minha senha</a>
+                    <p class="mb-0">Ainda não tem uma conta? <a href="cadastre-se.html" class="text-primary text-decoration-none">Cadastre-se</a></p>
                 </div>
-                <div class="mb-3">
-                    <label for="password" class="form-label">Senha</label>
-                    <input type="password" class="form-control" id="password" placeholder="Digite sua senha" required>
-                </div>
-                <button type="submit" class="btn btn-primary w-100">Entrar</button>
-            </form>
-            <div class="text-center mt-3">
-                <a href="#" class="text-danger">Esqueci minha senha</a>
-                <p class="mt-2">Ainda não tem uma conta? <a href="#" class="text-primary">Registre-se</a></p>
             </div>
         </div>
     </div>
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
