--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game Mania</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/style.css">
 </head>
 
 <body>
@@ -14,7 +14,7 @@
             <ul class="list-unstyled">
                 <nav class="logo-container search-container d-flex align-items-center justify-content-center gap-4 w-100 p-0">
                     <div class="menu">
-                      <button class="menu-btn ms-auto" type="button" data-bs-toggle="dropdown" aria-expanded="false"><img src="imagens/menu.png" alt="Menu"></button>
+                      <button class="menu-btn ms-auto" type="button" data-bs-toggle="dropdown" aria-expanded="false"><img src="assets/imagens/menu.png" alt="Menu"></button>
                        <ul class="dropdown-menu">
                          <li><a class="menu dropdown-item" href="#">Hardware</a></li>
                          <li><a class="menu dropdown-item" href="#">Periféricos</a></li>
@@ -33,22 +33,22 @@
                     
                     <figure class="mb-3">
                         <a href="index.html" class="logo-text">
-                            <img src="imagens/logo.png" alt="Logotipo do e-commerce GameMania" class="logo">
+                            <img src="assets/imagens/logo.png" alt="Logotipo do e-commerce GameMania" class="logo">
 
                         </a>
                     </figure>
                     <form action="#" class="search-bar">
                         <input type="text" placeholder="Pesquise seu Produto" class="search-input form-control">
-                        <button type="submit" class="search-button"><img src="imagens/lupa2.png" class="search-image" alt="Pesquisar"></button>
+                        <button type="submit" class="search-button"><img src="assets/imagens/lupa2.png" class="search-image" alt="Pesquisar"></button>
                     </form>
                     <nav class="icons-container d-flex align-items-center gap-3"> 
                         <figure class="mb-2">
-                            <a href="carrinho.html" class="carrinho mb-3"><img src="imagens/carrinho.png" alt="Carrinho" class="carrinho1"></a>
+                            <a href="carrinho.html" class="carrinho mb-3"><img src="assets/imagens/carrinho.png" alt="Carrinho" class="carrinho1"></a>
                         </figure>
                     </nav>
                     
                     <nav class="user-actions d-flex align-items-center gap-2 mb-2">
-                        <figure class="m-0"><a href="login.html" class="login"><img src="imagens/perfil.png" alt="Perfil"></a></figure>
+                        <figure class="m-0"><a href="login.html" class="login"><img src="assets/imagens/perfil.png" alt="Perfil"></a></figure>
                     </nav>
                 </nav>
             </ul>
@@ -60,19 +60,19 @@
         <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="imagens/imagem01.jpg" class="d-block w-100" alt="Imagem 1">
+                    <img src="assets/imagens/imagem01.jpg" class="d-block w-100" alt="Imagem 1">
                 </div>
                 <div class="carousel-item">
-                    <img src="imagens/imagem02.jpg" class="d-block w-100" alt="Imagem 2">
+                    <img src="assets/imagens/imagem02.jpg" class="d-block w-100" alt="Imagem 2">
                 </div>
                 <div class="carousel-item">
-                    <img src="imagens/imagem03.jpg" class="d-block w-100" alt="Imagem 3">
+                    <img src="assets/imagens/imagem03.jpg" class="d-block w-100" alt="Imagem 3">
                 </div>
                 <div class="carousel-item">
-                    <img src="imagens/imagem04.jpg" class="d-block w-100" alt="Imagem 4">
+                    <img src="assets/imagens/imagem04.jpg" class="d-block w-100" alt="Imagem 4">
                 </div>
                 <div class="carousel-item">
-                    <img src="imagens/imagem05.jpg" class="d-block w-100" alt="Imagem 5">
+                    <img src="assets/imagens/imagem05.jpg" class="d-block w-100" alt="Imagem 5">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
@@ -87,23 +87,23 @@
             <nav class="session mt-4 position-relative">
                 <section class="session-list d-grid gap-2">
                     <article class="session-item">
-                        <img src="imagens/sessao1.png" alt="Processadores" class="session-image">
+                        <img src="assets/imagens/sessao1.png" alt="Processadores" class="session-image">
                         <h3 class="session-title mt-3 text-center">Processadores</h3>
                     </article>
                     <article class="session-item">
-                        <img src="imagens/sessao2.png" alt="Gabinetes" class="session-image">
+                        <img src="assets/imagens/sessao2.png" alt="Gabinetes" class="session-image">
                         <h3 class="session-title mt-3 text-center">Gabinetes</h3>
                     </article>
                     <article class="session-item">
-                        <img src="imagens/sessao3.png" alt="Monitores" class="session-image">
+                        <img src="assets/imagens/sessao3.png" alt="Monitores" class="session-image">
                         <h3 class="session-title mt-3 text-center">Monitores</h3>
                     </article>
                     <article class="session-item">
-                        <img src="imagens/sessao4.png" alt="Placas-Mães" class="session-image">
+                        <img src="assets/imagens/sessao4.png" alt="Placas-Mães" class="session-image">
                         <h3 class="session-title mt-3 text-center">Placas-Mães</h3>
                     </article>
                     <article class="session-item">
-                        <img src="imagens/sessao5.png" alt="Cadeiras" class="session-image">
+                        <img src="assets/imagens/sessao5.png" alt="Cadeiras" class="session-image">
                         <h3 class="session-title mt-3 text-center">Cadeiras</h3>
                     </article>
                     <button class="session-control-prev" type="button">
@@ -119,64 +119,64 @@
                 <h2 class="text-center mb-4">Produtos em Destaque</h2>
                 <section class="product-list d-grid gap-2">
                     <article class="product-item">
-                        <img src="imagens/produto1.jpeg.png" alt="Produto 1" class="product-image">
+                        <img src="assets/imagens/produto1.jpeg.png" alt="Produto 1" class="product-image">
                         <h3 class="product-title mt-3 mb-2">Iphone 17 Pro Apple 256GB, Câmera Tripla Fusion de 43MP...</h3>
                         <p class="product-price mb-3">R$ 10.349,10</p>
-                        <button class="add-to-cart w-100"><img src="imagens/carrinho2.png" class="me-2">COMPRAR</button>
+                        <button class="add-to-cart w-100"><img src="assets/imagens/carrinho2.png" class="me-2">COMPRAR</button>
                     </article>
                     <article class="product-item">
-                        <img src="imagens/produto2.png" alt="Produto 2" class="product-image">
+                        <img src="assets/imagens/produto2.png" alt="Produto 2" class="product-image">
                         <h3 class="product-title mt-3 mb-2">Headset Gamer Sem Fio Logitech G PRO X Wireless LIGHTSPEED...</h3>
                         <p class="product-price mb-3">R$ 852,26</p>
-                        <button class="add-to-cart w-100"><img src="imagens/carrinho2.png" class="me-2">COMPRAR</button>
+                        <button class="add-to-cart w-100"><img src="assets/imagens/carrinho2.png" class="me-2">COMPRAR</button>
                     </article>
                     <article class="product-item">
-                        <img src="imagens/produto3.png" alt="Produto 3" class="product-image">
+                        <img src="assets/imagens/produto3.png" alt="Produto 3" class="product-image">
                         <h3 class="product-title mt-3 mb-2">Notebook Lenovo LOQ-E Core i5-12450HX, RTX 3050, 16GB RAM...</h3>
                         <p class="product-price mb-3">R$ 4.399,00</p>
-                        <button class="add-to-cart w-100"><img src="imagens/carrinho2.png" class="me-2">COMPRAR</button>
+                        <button class="add-to-cart w-100"><img src="assets/imagens/carrinho2.png" class="me-2">COMPRAR</button>
                     </article>
                     <article class="product-item">
-                        <img src="imagens/produto4.png" alt="Produto 4" class="product-image">
+                        <img src="assets/imagens/produto4.png" alt="Produto 4" class="product-image">
                         <h3 class="product-title mt-3 mb-2">Fone de Ouvido Bluetooth Tz50 Clip, Visor Digital, Bateria De Até 7h...</h3>
                         <p class="product-price mb-3">R$ 149,90</p>
-                        <button class="add-to-cart w-100"><img src="imagens/carrinho2.png" class="me-2">COMPRAR</button>
+                        <button class="add-to-cart w-100"><img src="assets/imagens/carrinho2.png" class="me-2">COMPRAR</button>
                     </article>
                     <article class="product-item">
-                        <img src="imagens/produto5.png" alt="Produto 5" class="product-image">
+                        <img src="assets/imagens/produto5.png" alt="Produto 5" class="product-image">
                         <h3 class="product-title mt-3 mb-2">Fonte MSI MAG A650BN, 650W, 80 Plus Bronze, PFC Ativo, Com...</h3>
                         <p class="product-price mb-3">R$ 376,46</p>
-                        <button class="add-to-cart w-100"><img src="imagens/carrinho2.png" class="me-2">COMPRAR</button>
+                        <button class="add-to-cart w-100"><img src="assets/imagens/carrinho2.png" class="me-2">COMPRAR</button>
                     </article>
                     <article class="product-item">
-                        <img src="imagens/produto6.png" alt="Produto 6" class="product-image">
+                        <img src="assets/imagens/produto6.png" alt="Produto 6" class="product-image">
                         <h3 class="product-title mt-3 mb-2">Memória RAM para Notebook Husky, 16GB, 3200MHz, DDR4...</h3>
                         <p class="product-price mb-3">R$ 315,68</p>
-                        <button class="add-to-cart w-100"><img src="imagens/carrinho2.png" class="me-2">COMPRAR</button>
+                        <button class="add-to-cart w-100"><img src="assets/imagens/carrinho2.png" class="me-2">COMPRAR</button>
                     </article>
                     <article class="product-item">
-                        <img src="imagens/produto7.png" alt="Produto 7" class="product-image">
+                        <img src="assets/imagens/produto7.png" alt="Produto 7" class="product-image">
                         <h3 class="product-title mt-3 mb-2">Placa-Mãe MSI A520M-A PRO, AMD AM4, mATX, DDR4, Preto...</h3>
                         <p class="product-price mb-3">R$ 499,99</p>
-                        <button class="add-to-cart w-100"><img src="imagens/carrinho2.png" class="me-2">COMPRAR</button>
+                        <button class="add-to-cart w-100"><img src="assets/imagens/carrinho2.png" class="me-2">COMPRAR</button>
                     </article>
                     <article class="product-item">
-                        <img src="imagens/produto8.png" alt="Produto 8" class="product-image">
+                        <img src="assets/imagens/produto8.png" alt="Produto 8" class="product-image">
                         <h3 class="product-title mt-3 mb-2">Processador AMD Ryzen 5 5600GT 3.6 GHz, (4.6GHz Max Turbo)...</h3>
                         <p class="product-price mb-3">R$ 499,99</p>
-                        <button class="add-to-cart w-100"><img src="imagens/carrinho2.png" class="me-2">COMPRAR</button>
+                        <button class="add-to-cart w-100"><img src="assets/imagens/carrinho2.png" class="me-2">COMPRAR</button>
                     </article>
                     <article class="product-item">
-                        <img src="imagens/produto9.png" alt="Produto 9" class="product-image">
+                        <img src="assets/imagens/produto9.png" alt="Produto 9" class="product-image">
                         <h3 class="product-title mt-3 mb-2">Console Sony Playstation 5, Edição Digital, SSD 825GB, Con...</h3>
                         <p class="product-price mb-3">R$ 3.626,07</p>
-                        <button class="add-to-cart w-100"><img src="imagens/carrinho2.png" class="me-2">COMPRAR</button>
+                        <button class="add-to-cart w-100"><img src="assets/imagens/carrinho2.png" class="me-2">COMPRAR</button>
                     </article>
                     <article class="product-item">
-                        <img src="imagens/produto10.png" alt="Produto 10" class="product-image">
+                        <img src="assets/imagens/produto10.png" alt="Produto 10" class="product-image">
                         <h3 class="product-title mt-3 mb-2">Placa de Vídeo XFX AMD RADEON RX 7600 Gaming Graphics Card, 8GB...</h3>
                         <p class="product-price mb-3">R$ 2.352,93</p>
-                        <button class="add-to-cart w-100"><img src="imagens/carrinho2.png" class="me-2">COMPRAR</button>
+                        <button class="add-to-cart w-100"><img src="assets/imagens/carrinho2.png" class="me-2">COMPRAR</button>
                     </article>
                 </section>
             </nav>
@@ -206,10 +206,10 @@
                     <h2 class="mb-3 ms-3">Redes Sociais</h2>
                     <p class="mb-3 ms-3">Siga-nos nas redes sociais:</p>
                     <ul class="social-media-links list-unstyled ms-3 gap-3 d-flex">
-                        <li><a href="#" class="d-flex align-items-center gap-2"><img src="imagens/facebooklogo.png">Facebook</a></li>
-                        <li><a href="#" class="d-flex align-items-center gap-2"><img src="imagens/tiktok.png">Tiktok</a></li>
-                        <li><a href="#" class="d-flex align-items-center gap-2"><img src="imagens/insta.png">Instagram</a></li>
-                        <li><a href="#" class="d-flex align-items-center gap-2"><img src="imagens/youtube.png">Youtube</a></li>
+                        <li><a href="#" class="d-flex align-items-center gap-2"><img src="assets/imagens/facebooklogo.png">Facebook</a></li>
+                        <li><a href="#" class="d-flex align-items-center gap-2"><img src="assets/imagens/tiktok.png">Tiktok</a></li>
+                        <li><a href="#" class="d-flex align-items-center gap-2"><img src="assets/imagens/insta.png">Instagram</a></li>
+                        <li><a href="#" class="d-flex align-items-center gap-2"><img src="assets/imagens/youtube.png">Youtube</a></li>
                     </ul>
 
                 </section>
