--- a/cadastre-se.html
+++ b/cadastre-se.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game Mania - Cadastre-se</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <link rel="stylesheet" href="cadastre-se.css">
+    <link rel="stylesheet" href="assets/cadastre-se.css">
 </head>
 <body class="bg-primary">
     <div class="container-fluid d-flex flex-column justify-content-center align-items-center min-vh-100">
         <a href="index.html" class="mb-4">
-            <img src="imagens/logo.png" alt="Game Mania Logo" class="img-fluid" style="width: 350px; max-width: 100%;">
+            <img src="assets/imagens/logo.png" alt="Game Mania Logo" class="img-fluid" style="width: 350px; max-width: 100%;">
         </a>
         
         <div class="card shadow-lg" style="width: 350px;">
