--- a/carrinho.html
+++ b/carrinho.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carrinho</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <link rel="stylesheet" href="carrinho.css">
+    <link rel="stylesheet" href="assets/carrinho.css">
 </head>
 <body>
     <header class="site-header ps-5 pe-5"> 
@@ -13,7 +13,7 @@
             <ul class="list-unstyled">
                 <nav class="logo-container search-container d-flex align-items-center justify-content-center gap-4 w-100 p-0">
                     <div class="menu">
-                      <button class="menu-btn ms-auto" type="button" data-bs-toggle="dropdown" aria-expanded="false"><img src="imagens/menu.png" alt="Menu"></button>
+                      <button class="menu-btn ms-auto" type="button" data-bs-toggle="dropdown" aria-expanded="false"><img src="assets/imagens/menu.png" alt="Menu"></button>
                        <ul class="dropdown-menu">
                          <li><a class="menu dropdown-item" href="#">Hardware</a></li>
                          <li><a class="menu dropdown-item" href="#">Periféricos</a></li>
@@ -32,22 +32,22 @@
                     
                     <figure class="mb-3">
                         <a href="index.html" class="logo-text">
-                            <img src="imagens/logo.png" alt="Logotipo do e-commerce GameMania" class="logo">
+                            <img src="assets/imagens/logo.png" alt="Logotipo do e-commerce GameMania" class="logo">
 
                         </a>
                     </figure>
                     <form action="#" class="search-bar">
                         <input type="text" placeholder="Pesquise seu Produto" class="search-input form-control">
-                        <button type="submit" class="search-button"><img src="imagens/lupa2.png" class="search-image" alt="Pesquisar"></button>
+                        <button type="submit" class="search-button"><img src="assets/imagens/lupa2.png" class="search-image" alt="Pesquisar"></button>
                     </form>
                     <nav class="icons-container d-flex align-items-center gap-3"> 
                         <figure class="mb-2">
-                            <a href="carrinho.html" class="carrinho mb-3"><img src="imagens/carrinho.png" alt="Carrinho" class="carrinho1"></a>
+                            <a href="carrinho.html" class="carrinho mb-3"><img src="assets/imagens/carrinho.png" alt="Carrinho" class="carrinho1"></a>
                         </figure>
                     </nav>
                     
                     <nav class="user-actions d-flex align-items-center gap-2 mb-2">
-                        <figure class="m-0"><a href="login.html" class="login"><img src="imagens/perfil.png" alt="Perfil"></a></figure>
+                        <figure class="m-0"><a href="login.html" class="login"><img src="assets/imagens/perfil.png" alt="Perfil"></a></figure>
                     </nav>
                 </nav>
             </ul>
@@ -58,12 +58,12 @@
                 <h2>Meu Carrinho</h2>
                 <section class="product-list">
                     <article class="product-item mb-3">
-                        <img src="imagens/produto1.jpeg.png" alt="Imagem do Produto 1" class="product-image">
+                        <img src="assets/imagens/produto1.jpeg.png" alt="Imagem do Produto 1" class="product-image">
                         <h3 class="product-title">Iphone 17 Pro Apple 256GB, Câmera Tripla Fusion de 43MP...</h3>
                         <p class="product-price">R$ 10.349,10</p>
                     </article>
                     <article class="product-item mb-5">
-                        <img src="imagens/produto2.png" alt="Imagem do Produto 2" class="product-image">
+                        <img src="assets/imagens/produto2.png" alt="Imagem do Produto 2" class="product-image">
                         <h3 class="product-title">Headset Gamer Sem Fio Logitech G PRO X Wireless LIGHTSPEED...</h3>
                         <p class="product-price">R$ 852,26</p>
                     </article>
@@ -100,10 +100,10 @@
                     <h2 class="mb-3 ms-3">Redes Sociais</h2>
                     <p class="mb-3 ms-3">Siga-nos nas redes sociais:</p>
                     <ul class="social-media-links list-unstyled ms-3 gap-3 d-flex">
-                        <li><a href="#" class="d-flex align-items-center gap-2"><img src="imagens/facebooklogo.png">Facebook</a></li>
-                        <li><a href="#" class="d-flex align-items-center gap-2"><img src="imagens/tiktok.png">Tiktok</a></li>
-                        <li><a href="#" class="d-flex align-items-center gap-2"><img src="imagens/insta.png">Instagram</a></li>
-                        <li><a href="#" class="d-flex align-items-center gap-2"><img src="imagens/youtube.png">Youtube</a></li>
+                        <li><a href="#" class="d-flex align-items-center gap-2"><img src="assets/imagens/facebooklogo.png">Facebook</a></li>
+                        <li><a href="#" class="d-flex align-items-center gap-2"><img src="assets/imagens/tiktok.png">Tiktok</a></li>
+                        <li><a href="#" class="d-flex align-items-center gap-2"><img src="assets/imagens/insta.png">Instagram</a></li>
+                        <li><a href="#" class="d-flex align-items-center gap-2"><img src="assets/imagens/youtube.png">Youtube</a></li>
                     </ul>
 
                 </section>
