ATIVIDADES 1 ATÉ 8 (RESOLUÇÃO:1366 X 768)

--- a/index.html
+++ b/index.html
@@ -122,61 +122,61 @@
                         <img src="assets/imagens/produto1.jpeg.png" alt="Produto 1" class="product-image">
                         <h3 class="product-title mt-3 mb-2">Iphone 17 Pro Apple 256GB, Câmera Tripla Fusion de 43MP...</h3>
                         <p class="product-price mb-3">R$ 10.349,10</p>
-                        <button class="add-to-cart w-100"><img src="assets/imagens/carrinho2.png" class="me-2">COMPRAR</button>
+                        <button class="add-to-cart btn btn-success mt-auto w-100"><img src="assets/imagens/carrinho2.png" class="me-2">COMPRAR</button>
                     </article>
                     <article class="product-item">
                         <img src="assets/imagens/produto2.png" alt="Produto 2" class="product-image">
                         <h3 class="product-title mt-3 mb-2">Headset Gamer Sem Fio Logitech G PRO X Wireless LIGHTSPEED...</h3>
                         <p class="product-price mb-3">R$ 852,26</p>
-                        <button class="add-to-cart w-100"><img src="assets/imagens/carrinho2.png" class="me-2">COMPRAR</button>
+                        <button class="add-to-cart btn btn-success mt-auto w-100"><img src="assets/imagens/carrinho2.png" class="me-2">COMPRAR</button>
                     </article>
                     <article class="product-item">
                         <img src="assets/imagens/produto3.png" alt="Produto 3" class="product-image">
                         <h3 class="product-title mt-3 mb-2">Notebook Lenovo LOQ-E Core i5-12450HX, RTX 3050, 16GB RAM...</h3>
                         <p class="product-price mb-3">R$ 4.399,00</p>
-                        <button class="add-to-cart w-100"><img src="assets/imagens/carrinho2.png" class="me-2">COMPRAR</button>
+                        <button class="add-to-cart btn btn-success mt-auto w-100"><img src="assets/imagens/carrinho2.png" class="me-2">COMPRAR</button>
                     </article>
                     <article class="product-item">
                         <img src="assets/imagens/produto4.png" alt="Produto 4" class="product-image">
                         <h3 class="product-title mt-3 mb-2">Fone de Ouvido Bluetooth Tz50 Clip, Visor Digital, Bateria De Até 7h...</h3>
                         <p class="product-price mb-3">R$ 149,90</p>
-                        <button class="add-to-cart w-100"><img src="assets/imagens/carrinho2.png" class="me-2">COMPRAR</button>
+                        <button class="add-to-cart btn btn-success mt-auto w-100"><img src="assets/imagens/carrinho2.png" class="me-2">COMPRAR</button>
                     </article>
                     <article class="product-item">
                         <img src="assets/imagens/produto5.png" alt="Produto 5" class="product-image">
                         <h3 class="product-title mt-3 mb-2">Fonte MSI MAG A650BN, 650W, 80 Plus Bronze, PFC Ativo, Com...</h3>
                         <p class="product-price mb-3">R$ 376,46</p>
-                        <button class="add-to-cart w-100"><img src="assets/imagens/carrinho2.png" class="me-2">COMPRAR</button>
+                        <button class="add-to-cart btn btn-success mt-auto w-100"><img src="assets/imagens/carrinho2.png" class="me-2">COMPRAR</button>
                     </article>
                     <article class="product-item">
                         <img src="assets/imagens/produto6.png" alt="Produto 6" class="product-image">
                         <h3 class="product-title mt-3 mb-2">Memória RAM para Notebook Husky, 16GB, 3200MHz, DDR4...</h3>
                         <p class="product-price mb-3">R$ 315,68</p>
-                        <button class="add-to-cart w-100"><img src="assets/imagens/carrinho2.png" class="me-2">COMPRAR</button>
+                        <button class="add-to-cart btn btn-success mt-auto w-100"><img src="assets/imagens/carrinho2.png" class="me-2">COMPRAR</button>
                     </article>
                     <article class="product-item">
                         <img src="assets/imagens/produto7.png" alt="Produto 7" class="product-image">
                         <h3 class="product-title mt-3 mb-2">Placa-Mãe MSI A520M-A PRO, AMD AM4, mATX, DDR4, Preto...</h3>
                         <p class="product-price mb-3">R$ 499,99</p>
-                        <button class="add-to-cart w-100"><img src="assets/imagens/carrinho2.png" class="me-2">COMPRAR</button>
+                        <button class="add-to-cart btn btn-success mt-auto w-100"><img src="assets/imagens/carrinho2.png" class="me-2">COMPRAR</button>
                     </article>
                     <article class="product-item">
                         <img src="assets/imagens/produto8.png" alt="Produto 8" class="product-image">
                         <h3 class="product-title mt-3 mb-2">Processador AMD Ryzen 5 5600GT 3.6 GHz, (4.6GHz Max Turbo)...</h3>
                         <p class="product-price mb-3">R$ 499,99</p>
-                        <button class="add-to-cart w-100"><img src="assets/imagens/carrinho2.png" class="me-2">COMPRAR</button>
+                        <button class="add-to-cart btn btn-success mt-auto w-100"><img src="assets/imagens/carrinho2.png" class="me-2">COMPRAR</button>
                     </article>
                     <article class="product-item">
                         <img src="assets/imagens/produto9.png" alt="Produto 9" class="product-image">
                         <h3 class="product-title mt-3 mb-2">Console Sony Playstation 5, Edição Digital, SSD 825GB, Con...</h3>
                         <p class="product-price mb-3">R$ 3.626,07</p>
-                        <button class="add-to-cart w-100"><img src="assets/imagens/carrinho2.png" class="me-2">COMPRAR</button>
+                        <button class="add-to-cart btn btn-success mt-auto w-100"><img src="assets/imagens/carrinho2.png" class="me-2">COMPRAR</button>
                     </article>
                     <article class="product-item">
                         <img src="assets/imagens/produto10.png" alt="Produto 10" class="product-image">
                         <h3 class="product-title mt-3 mb-2">Placa de Vídeo XFX AMD RADEON RX 7600 Gaming Graphics Card, 8GB...</h3>
                         <p class="product-price mb-3">R$ 2.352,93</p>
-                        <button class="add-to-cart w-100"><img src="assets/imagens/carrinho2.png" class="me-2">COMPRAR</button>
+                        <button class="add-to-cart btn btn-success mt-auto w-100"><img src="assets/imagens/carrinho2.png" class="me-2">COMPRAR</button>
                     </article>
                 </section>
             </nav>
@@ -221,6 +221,10 @@
 
     </main>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-</body>
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <!-- jQuery (necessário para o comportamento mínimo do carrinho) -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- Seu JavaScript Customizado -->
+    <script src="assets/main.js"></script>
 </html>
