--- a/cadastre-se.html
+++ b/cadastre-se.html
@@ -16,7 +16,7 @@
         <div class="card shadow-lg" style="width: 350px;">
             <div class="card-body p-4">
                 <h2 class="text-center text-primary mb-4">Cadastre-se</h2>
-                <form>
+                <form id="cadastro-form">
                     <div class="mb-3">
                         <label for="name" class="form-label">Nome</label>
                         <input type="text" class="form-control" id="name" placeholder="Digite seu nome" required>
@@ -42,6 +42,8 @@
         </div>
     </div>
     
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/main.js"></script>
 </body>
 </html>
