--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
         <div class="card shadow-lg" style="width: 350px;">
             <div class="card-body p-4">
                 <h2 class="text-center text-primary mb-4">Login</h2>
-                <form>
+                <form id="login-form">
                     <div class="mb-3">
                         <label for="username" class="form-label">Nome de Usuário ou e-mail</label>
                         <input type="text" class="form-control" id="username" placeholder="Digite seu nome de usuário ou e-mail" required>
@@ -35,6 +35,8 @@
         </div>
     </div>
     
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/main.js"></script>
 </body>
 </html>
